updated quickstart config

--- a/config/quickstart-hdfs.properties
+++ b/config/quickstart-hdfs.properties
@@ -13,6 +13,11 @@
 name=hdfs-sink
 connector.class=io.confluent.connect.hdfs.HdfsSinkConnector
 tasks.max=1
-topics=test_hdfs
-hdfs.url=hdfs://localhost:9000
-flush.size=3
+topics=test_hdfs50
+hdfs.url=webhdfs://localhost:50070
+flush.size=5
+rotate.interval.ms=500
+partitioner.class=io.confluent.connect.hdfs.partitioner.FieldPartitioner
+partition.field.name=e_type
+
+
